// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pool accounts funds goes to zero > receiver Peregrine::messageQueue::[Processed] 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": false,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`Pool accounts funds goes to zero > receiver Peregrine::polkadotXcm::[AssetsTrapped] 1`] = `
[
  {
    "data": {
      "assets": {
        "V4": [
          {
            "fun": {
              "Fungible": "(rounded 100000000000000000)",
            },
            "id": {
              "interior": {
                "X2": [
                  {
                    "GlobalConsensus": {
                      "Ethereum": {
                        "chainId": "(rounded 11000000)",
                      },
                    },
                  },
                  {
                    "AccountKey20": {
                      "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 2,
            },
          },
        ],
      },
      "hash_": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
    },
    "method": "AssetsTrapped",
    "section": "polkadotXcm",
  },
]
`;

exports[`Pool accounts funds goes to zero > sender AssetHub::foreignAssets::[Transferred] 1`] = `
[
  {
    "data": {
      "amount": "(rounded 100000000000000000)",
      "assetId": {
        "interior": {
          "X2": [
            {
              "GlobalConsensus": {
                "Ethereum": {
                  "chainId": "(rounded 11000000)",
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                "network": null,
              },
            },
          ],
        },
        "parents": 2,
      },
      "from": "15jSz35ugoWTc61xHPoxEkHte4o7UanKCk1gx1dizA8yuNs8",
      "to": "13cKp88mpGREFCq8KsJEFjpSBnjFuCNWq6bmD3js7fu4f66e",
    },
    "method": "Transferred",
    "section": "foreignAssets",
  },
]
`;

exports[`Pool accounts funds goes to zero > sender AssetHub::polkadotXcm::[Attempted] 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6200)",
            "refTime": "(rounded 290000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`Pool accounts funds goes to zero > sender AssetHub::xcmpQueue::[XcmpMessageSent] 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;

exports[`Send eKILT from other reserve location > receiver Peregrine::messageQueue::[Processed] 1`] = `
[
  {
    "data": {
      "error": "Unsupported",
      "id": "(hash)",
      "origin": "Parent",
    },
    "method": "ProcessingFailed",
    "section": "messageQueue",
  },
]
`;

exports[`Send eKILT from other reserve location > sender Rococo::xcmPallet::[XcmMessageSent] 1`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 0,
      },
      "message": [
        {
          "ReserveAssetDeposited": [
            {
              "fun": {
                "Fungible": 100000000000000000,
              },
              "id": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": "(rounded 11000000)",
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 100000000000000000,
              },
              "id": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": "(rounded 11000000)",
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": "All",
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": "Here",
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "xcmPallet",
  },
]
`;

exports[`Send eKILT while switch Pair does not exist > receiver Peregrine::messageQueue::[Processed] 1`] = `[]`;

exports[`Send eKILT while switch Pair does not exist > sender AssetHub::foreignAssets::[Transferred] 1`] = `[]`;

exports[`Send eKILT while switch Pair does not exist > sender AssetHub::polkadotXcm::[Attempted] 1`] = `[]`;

exports[`Send eKILT while switch Pair does not exist > sender AssetHub::xcmpQueue::[XcmpMessageSent] 1`] = `[]`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > receiver AssetHub::messageQueue::[Processed] 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": "(rounded 2100)",
      },
      "success": false,
      "weightUsed": {
        "proofSize": "(rounded 9800)",
        "refTime": "(rounded 460000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > receiver AssetHub::polkadotXcm::[AssetsTrapped] 1`] = `
[
  {
    "data": {
      "assets": {
        "V4": [
          {
            "fun": {
              "Fungible": "(rounded 100000000000)",
            },
            "id": {
              "interior": "Here",
              "parents": 1,
            },
          },
        ],
      },
      "hash_": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 1,
      },
    },
    "method": "AssetsTrapped",
    "section": "polkadotXcm",
  },
]
`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > sender Peregrine::assetSwitchPool1::[LocalToRemoteSwitchExecuted] 1`] = `
[
  {
    "data": {
      "amount": 50000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V4": {
          "interior": {
            "X1": [
              {
                "AccountId32": {
                  "id": "(hash)",
                  "network": null,
                },
              },
            ],
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > sender Peregrine::balances::[Transfer] 1`] = `
[
  {
    "data": {
      "amount": 50000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": "4nv4phaKc4EcwENdRERuMF79ZSSB5xvnAk3zNySSbVbXhSwS",
    },
    "method": "Transfer",
    "section": "balances",
  },
]
`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > sender Peregrine::xcmpQueue::[XcmpMessageSent] 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;
